fix: support multiline commit messages in git library
Changed Python string handling from single quotes to triple quotes
to properly handle multiline commit messages. Also updated the git
wrapper to use eval instead of piping to sh for better script execution.

This fixes the SyntaxError that occurred when commit messages contained
newlines, allowing for more detailed commit descriptions.

--- a/libraries/git/git.yaml
+++ b/libraries/git/git.yaml
@@ -52,7 +52,7 @@ match:
         import os
         
         # Get commit message from args (args.2 is the message after "commit -m")
-        msg = "{{args.2|}}"
+        msg = """{{args.2|}}"""
         if not msg:
             print("ERROR: No commit message provided", file=sys.stderr)
             print("  Usage: git commit -m 'message'", file=sys.stderr)
