--- a/docs/libraries/git/meta.yaml
+++ b/docs/libraries/git/meta.yaml
@@ -1,18 +1,15 @@
-# Library metadata
 name: git
-version: 0.1.0
+version: 0.1.1
 description: Enhanced git workflow with conventional commits
 author: Fredrik Angelsen
-
 requires:
-  - git
-
+- git
 provides:
-  - commit validation
-  - AI signature stripping  
-  - push protection for main/master
+- commit validation
+- AI signature stripping
+- push protection for main/master
+usage: 'ry libraries/git/git.yaml add .
 
-usage: |
-  ry libraries/git/git.yaml add .
   ry libraries/git/git.yaml commit "feat: add new feature"
-  ry libraries/git/git.yaml push
+
+  ry libraries/git/git.yaml push'
