--- a/docs/libraries/uv/uv.yaml
+++ b/docs/libraries/uv/uv.yaml
@@ -136,7 +136,7 @@ match:
             echo "$UV_OUTPUT"
         else
             # Just showing version
-            {{env.RY_UV|/usr/bin/uv}} version {{args.rest|}}
+            {{env.RY_UV|/usr/bin/uv}} version {{args.all|}}
         fi
   
   publish:
