--- a/docs/libraries/uv/meta.yaml
+++ b/docs/libraries/uv/meta.yaml
@@ -2,12 +2,14 @@
 name: uv
 version: 0.1.0
 description: Enhanced uv operations with git integration
-author: ry-tool
+author: Fredrik Angelsen
+dependencies:
+  changelog: ">=0.1.0"
 
 features:
   - Automatic changelog updates on version bump
-  - Atomic git operations (commit + tag)
-  - Lockfile synchronization
+  - Atomic git operations (commit + tag, but not push)
+  - Lockfile synchronization  
   - Clean git state validation
 
 commands:
