chore: update registry, site, and add YAML colon safety check
- Fixed site-builder.yaml YAML syntax (quote shell commands with colons)
- Updated registry.json with latest library metadata
- Regenerated static site with current libraries
- Added YAML colon safety check to style enforcement

--- a/docs/libraries/site-builder/site-builder.yaml
+++ b/docs/libraries/site-builder/site-builder.yaml
@@ -66,9 +66,9 @@ match:
           echo "  Run: ry site-builder init" >&2
           exit 1
         fi
-    # Use $RY_LIBRARY_DIR to reference library files
-    - shell: python $RY_LIBRARY_DIR/lib/build.py
-    - shell: echo "SUCCESS: Generated docs/index.html" >&2
+    
+    - shell: "python $RY_LIBRARY_DIR/lib/build.py"
+    - shell: 'echo "SUCCESS: Generated docs/index.html" >&2'
   
   preview:
     - shell: |
